<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">>

    <string name="app_name">Github User</string>
    <string name="setting_language">setting language</string>
    <string name="username">Username</string>
    <string name="github">github</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="repositories">repositories</string>
    <string name="username_not_found">username not found</string>
    <string name="back_button">back button</string>
    <string name="empty">empty</string>
    <string name="setting">setting</string>
    <string name="favorite">favorite</string>
    <string name="add_user">add user to favorite</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="enter_name">Enter name</string>
    <string name="icon_setting">icon setting</string>
    <string name="selamat_datang">Selamat datang</string>
    <string name="my_name">Didi Prasetyo</string>
    <string name="setting_name">setting name</string>
    <string name="daftar_user_github_favorite">Daftar user github favorite</string>
</resources>