<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvSettingLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_language"
        app:drawableLeftCompat="@drawable/ic_baseline_settings_24_black" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode"
        android:textSize="18sp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:ems="10"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSettingName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_name"/>

</LinearLayout>