<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:minHeight="?attr/actionBarSize">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            app:theme="@style/AppTheme.AppBarOverlay">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_keyboard_backspace_24"
                android:contentDescription="@string/back_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                tools:text="@string/username"
                android:gravity="center"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:layout_marginStart="40dp"
                android:textColor="@color/black"/>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_baseline_circle_24"
                    android:layout_margin="16dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/repositories"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="100"
                            android:textColor="@color/black"
                            android:background="@color/colorGrey"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/followers"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="100"
                            android:textColor="@color/black"
                            android:background="@color/colorGrey"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/following"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="100"
                            android:textColor="@color/black"
                            android:background="@color/colorGrey"/>

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="145dp"
                android:layout_height="17dp"
                tools:text="neuraline, Jakarta"
                android:layout_marginStart="16dp"
                tools:textSize="17sp"
                android:textStyle="bold"
                android:background="@color/colorGrey"/>

            <TextView
                android:layout_width="260dp"
                android:layout_height="15dp"
                tools:text="Serial Product Creator. Hackathon Addict"
                android:layout_marginStart="16dp"
                android:background="@color/colorGrey"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="150dp"
                android:layout_height="15dp"
                android:layout_marginStart="16dp"
                android:background="@color/colorGrey"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="180dp"
                android:layout_height="15dp"
                android:layout_marginStart="16dp"
                android:background="@color/colorGrey"
                android:layout_marginTop="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@color/colorGrey" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

            <include layout="@layout/shimmer_list_user_item"/>
            <include layout="@layout/shimmer_list_user_item"/>
            <include layout="@layout/shimmer_list_user_item"/>
        </LinearLayout>
</LinearLayout>