<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerDetailUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <include layout="@layout/shimmer_detail_user"/>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@color/black">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/TransparentText"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_collapseMode="parallax"
                android:layout_gravity="center"
                android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_baseline_circle_24"
                    android:layout_margin="16dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/repositories"
                            android:maxLines="1"
                            android:textColor="@color/textColor"/>

                        <TextView
                            android:id="@+id/tvJmlhRepositories"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="100"
                            android:textColor="@color/textColor"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/followers"
                            android:textColor="@color/textColor"/>

                        <TextView
                            android:id="@+id/tvJmlhFollowers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="100"
                            android:textColor="@color/textColor"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/following"
                            android:textColor="@color/textColor"/>

                        <TextView
                            android:id="@+id/tvJmlhFollowing"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="100"
                            android:textColor="@color/textColor"/>

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="neuraline, Jakarta"
                android:layout_marginStart="16dp"
                tools:textSize="17sp"
                tools:textColor="@color/textColor"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Serial Product Creator. Hackathon Addict"
                android:layout_marginStart="16dp"
                android:textColor="@color/textColor"/>

            <TextView
                android:id="@+id/tvCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Nusantara Beta Studio"
                android:layout_marginStart="16dp"
                android:textColor="@color/textColor"/>

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="permana.sidiq@gmail.com"
                android:layout_marginStart="16dp"
                android:textColor="@color/textColor"/>
            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGrey"
            app:tabBackground="@drawable/tab_layout_selector"
            app:tabIndicatorColor="@color/grey100"
            app:tabSelectedTextColor="@color/black"
            app:tabTextColor="@color/white"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_user"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_baseline_favorite_24"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>